# optiML

./: README.md  pyproject.toml  test_certification.py  test_iris_exact.py
.github/workflows/: publish_pypi.py  publish_pypi.yml
examples/: binary_classification.py
optiml/: __init__.py  convex.py  layers.py  losses.py  model.py  solver.py
optiml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
